[package]
name = "samp_network_adapter"
version = "1.0.0"
authors = ["Rinat Namazov <rinat.namazov@rinwares.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rust-ini = "0.19.0"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
]