[package]
name = "samp-network-adapter"
version = "1.0.0"
authors = ["Rinat Namazov <rinat.namazov@rinwares.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[package.metadata.winres]
ProductName = "RiNetworkAdapter"
FileDescription = "https://github.com/RinatNamazov/samp-network-adapter"
OriginalFilename = "RiNetworkAdapter.asi"
LegalCopyright = "Copyright © 2023 RINWARES, Rinat Namazov"

[dependencies]
rust-ini = "0.19.0"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
]

[build-dependencies]
winres = "0.1"